Updated project files and cleaned assets

--- a/src/application/applicationform.html
+++ b/src/application/applicationform.html
@@ -14,7 +14,8 @@
         <p>Apply For Jobs Here</p>
     </header>
     <main class="container form-container">
-        <section id = "application-form" >
+        <section class="container" id = "application-form" >
+            <div>
             <h2 style="font-weight: 600; color: #181aa1;">Job Application</h2>
             <p>Please fill in the details below:</p>
             <p><strong>Note</strong>: You cannot edit or view your application again, so enter the details carefully. In case of any emergency, contact us at <strong>skillsync@example.com</strong> </p>
@@ -40,33 +41,12 @@
                     
                 <button type="submit" class="btn btn-primary">Submit Application</button>
             </form>
+            </div>
         </section>
     </main>
 
-    <!--Bootstrap Modals-->
-     <div class="modal fade" id="customModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-
-      <div id="modal-header" class="modal-header bg-info text-black">
-        <h5 class="modal-title " id="modalTitle">Title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-
-      <div class="modal-body text-dark" id="modalBody">
-        Message
-      </div>
-
-      <div class="modal-footer" id="modalFooter">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
     <footer class = "bg-dark text-white">
-        <p>&copy; 2025 Job Portal. All rights reserved.</p>
+        <p>&copy; 2025 Job SkillSync. All rights reserved.</p>
     </footer>
     <script type="module" src="../script-modules/applications.js"></script>
     <script type="module" src = "../assets/js/bootstrap.bundle.min.js"></script>
