--- a/src/application/employer.html
+++ b/src/application/employer.html
@@ -39,7 +39,7 @@
       </nav>
 
       <header id = "emp-header">
-       <img style="width: 100%; " src="../assets/images/hiring-concept-with-empty-chair.jpg" alt="Header Image" class="logo">
+       
     </header>
 
       <main class="container">
@@ -66,8 +66,6 @@
         </section>
     </main>
 
-    <!--Modal for Alerts, Confirmations etc-->
-   
    
 <!-- Edit Job Modal -->
 <div class="modal fade" id="editJobModal" tabindex="-1" >
@@ -127,8 +125,9 @@
 </div>
 
         <footer >
-            <p>&copy; 2025 Job Portal. All rights reserved.</p>
+            <p>&copy; 2025 SkillSync. All rights reserved.</p>
         </footer>
+        
           <script type="module" src="../assets/js/bootstrap.bundle.min.js"></script>
           <script type = "module" src="../script-modules/employer.js"></script>
           <script type="module" src="../components/modals.js"></script>
