--- a/src/application/jobseeker.html
+++ b/src/application/jobseeker.html
@@ -74,35 +74,9 @@
 
     </section>
 
-   <section>
-   
-   </section>
-
-
-     <div class="modal fade" id="customModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-
-      <div id="modal-header"  class="modal-header bg-info text-black">
-        <h5 class="modal-title " id="modalTitle">Applications</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-
-      <div class="modal-body text-dark" id="modalBody">
-        
-      </div>
-
-      <div class="modal-footer" id="modalFooter">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
-  </div>
-</div>
-
       </main>
     <footer >
-        <p>&copy; 2025 Job Portal. All rights reserved.</p>
+        <p>&copy; 2025 SkillSync. All rights reserved.</p>
     </footer>
       <script src="../assets/js/bootstrap.bundle.min.js"></script>
       <script type="module" src ="../script-modules/jobs.js"></script>
