--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
        <div class="header-content">
         <h1 >Welcome to SkillSync!</h1>
         <p >Your gateway to meaningful employment.</p>
+        <p style = "font-weight: bold;">A project by Ali Hassan Abbasi</p>
     </header>
 
 <main class="container">
